feat: impl rawArrayClass, multianewarray